tests/neg-macros/macro-class-not-found-2.check
-- Error: tests/neg-macros/macro-class-not-found-2/Bar.scala:4:13 ------------------------------------------------------
4 |  Foo.myMacro() // error
  |  ^^^^^^^^^^^^^
  |  Exception occurred while executing macro expansion.
  |  java.lang.NoClassDefFoundError: this.is.not.a.Class
  |  	at Foo$.aMacroImplementation(Foo.scala:8)
  |
  | This location is in code that was inlined at Bar.scala:4
